FlightPath 5.x Changelog
========================

2017-03-05
  Added new course sort policy (to be considered in 'beta' for the time being,
  which allows to select highest grade, exclude other attempts.


2017-02-19
  Fixed bug in duplicating degrees re: groups with var hours.

  Added a hook to allow modules to modify a term_id prior to getting its description.


2017-02-11
  Fixed another bug relating to the logic of pulling up a student when two advisors are
  working on the student at the same time.

  Modified some logic in _FlightPath to accomodate the double advisor issue bug.


2017-02-07
  Fixed advising session bug where advisors working at the same time on the same student might see
  each other's draft work.
  

2017-01-26
  Fixed bug where duplicating an entire year of courses was skipping over the max hours, if they were
  set to zero.
  

2017-01-19
  Fixed bug in duplicate degrees, where some of the new fields were not being included.
  

2017-01-18
  Fixed bug where advised identical courses in same semester, but in different degrees, FlightPath got confused about which
  course to check.
  
  Fixed bug where after clearing advising cache, an adviser showed invalid tabs.
  
  Fixed bug with variable hour courses not being selected after changing hour selector.
   
 
2017-01-14
  Made more changes, to ensure that users cannot access another student's data by manipulating
  URL variables. 
 
 
2017-01-04
  Handful of extra changes to logout function, again, for Safari browser bug. 
  
  Added more HTML comments to the course_search_display_courses render api call, to give
  more spots for custom modules to dig in and change/add content.
  

2017-01-03
  Added additional unsetting of SESSION vars when cache is cleared, to erase any potential problems.
  
  Working on logout function, to address issue from Safari browser where SESSION is not being
  destroyed correctly.
  

2017-01-02